<resources>
    <string name="app_name" translatable="false">3D print FDM cost Calculator</string>
    <string name="ma_ad_banner_id" translatable="false">ca-app-pub-2870168293382158/1978502016</string>
    <string name="lpa_ad_banner_id" translatable="false">ca-app-pub-2870168293382158/3284323758</string>
    <string name="pa_ad_banner_id" translatable="false">ca-app-pub-2870168293382158/3263948934</string>
    <string name="lpl_ad_banner_id" translatable="false">ca-app-pub-2870168293382158/8271026749</string>
    <string name="pl_ad_banner_id" translatable="false">ca-app-pub-2870168293382158/4046014733</string>
    <string name="lpr_ad_banner_id" translatable="false">ca-app-pub-2870168293382158/5261720025</string>
    <string name="pr_ad_banner_id" translatable="false">ca-app-pub-2870168293382158/7696311679</string>
    <string name="lfl_ad_banner_id" translatable="false">ca-app-pub-2870168293382158/1276381165</string>
    <string name="fl_ad_banner_id" translatable="false">ca-app-pub-2870168293382158/1511065328</string>
    <string name="lst_ad_banner_id" translatable="false">ca-app-pub-2870168293382158/2827128377</string>
    <string name="st_ad_banner_id" translatable="false">ca-app-pub-2870168293382158/7887883363</string>

    <string name="program_folder" translatable="false">3DprintCostCalc</string>
    <string name="file_list_plastic" translatable="false">Plastic</string>
    <string name="file_list_filament" translatable="false">Filament</string>
    <string name="file_list_settings" translatable="false">Setting</string>
    <string name="file_list_parts" translatable="false">Parts</string>
    <string name="file_list_products" translatable="false">Products</string>
    <string name="loading">Loading…</string>
    <string name="version">version</string>
    <string name="name">Name</string>
    <string name="name_colon">Name:</string>
    <string name="plastic">Plastic</string>
    <string name="plastic_colon">Plastic:</string>
    <string name="color">Color</string>
    <string name="color_colon">Color:</string>
    <string name="diameter">Diameter (mm)</string>
    <string name="diameter_colon">Diameter (mm):</string>
    <string name="spool_weight">Spool weight (kg)</string>
    <string name="spool_weight_colon">Spool weight (kg):</string>
    <string name="spool_cost">Spool cost</string>
    <string name="spool_cost_colon">Spool cost:</string>
    <string name="spool_length_m">Spool length (m)</string>
    <string name="spool_length_m_colon">Spool length (m):</string>
    <string name="spool_weight_1_meter_g">Spool weight 1 meter (g)</string>
    <string name="spool_weight_1_meter_g_colon">Spool weight 1 meter (g):</string>
    <string name="cost_1_kg">Cost 1 kg</string>
    <string name="cost_1_kg_colon">Cost 1 kg:</string>
    <string name="cost_1_meter">Cost 1 meter</string>
    <string name="cost_1_meter_colon">Cost 1 meter:</string>
    <string name="add_new_filament">Add new filament</string>
    <string name="add_new_part">Add new part</string>
    <string name="add_new_plastic">Add new plastic</string>
    <string name="add_new_product">Add new product</string>
    <string name="add_new_setting">Add new setting</string>
    <string name="filament">Filament</string>
    <string name="filament_colon">Filament:</string>
    <string name="settings">Settings</string>
    <string name="settings_colon">Settings:</string>
    <string name="parts">Parts</string>
    <string name="parts_colon">Parts:</string>
    <string name="products">Products</string>
    <string name="products_colon">Products:</string>
    <string name="time_printing_hours">Time printing (hours)</string>
    <string name="time_printing_hours_colon">Time printing (hours):</string>
    <string name="time_printing_minutes">Time printing (minutes)</string>
    <string name="time_printing_minutes_colon">Time printing (minutes):</string>
    <string name="filament_length_mm">Filament length (mm)</string>
    <string name="filament_length_mm_colon">Filament length (mm):</string>
    <string name="weight">Weight (g)</string>
    <string name="weight_colon">Weight (g):</string>
    <string name="filament_cost">Filament cost</string>
    <string name="filament_cost_colon">Filament cost:</string>
    <string name="electricity_cost">Electricity cost</string>
    <string name="electricity_cost_colon">Electricity cost:</string>
    <string name="electricity_cost_1_kwt">Electricity cost to 1 kWatt</string>
    <string name="electricity_cost_1_kwt_colon">Electricity cost to 1 kWatt:</string>
    <string name="depreciation_cost">Depreciation cost</string>
    <string name="depreciation_cost_colon">Depreciation cost:</string>
    <string name="net_cost">Net cost</string>
    <string name="net_cost_colon">Net cost:</string>
    <string name="total_cost">Total cost</string>
    <string name="total_cost_colon">Total cost:</string>
    <string name="profit">Profit</string>
    <string name="profit_colon">Profit:</string>
    <string name="density">Density (g/cm³)</string>
    <string name="density_colon">Density (g/cm³):</string>
    <string name="time">Time</string>
    <string name="time_colon">Time:</string>
    <string name="printer_cost">Printer cost</string>
    <string name="printer_cost_colon">Printer cost:</string>
    <string name="printer_power">Printer power (Watt)</string>
    <string name="printer_power_colon">Printer power (Watt):</string>
    <string name="depreciation_years">Depreciation years</string>
    <string name="depreciation_years_colon">Depreciation years:</string>
    <string name="final_cost_to_1_gram">Final cost (to 1 gram)</string>
    <string name="final_cost_to_1_gram_colon">Final cost (to 1 gram):</string>
    <string name="cost_1_hour_work_electricity">Cost 1 hour work (electricity)</string>
    <string name="cost_1_hour_work_electricity_colon">Cost 1 hour work (electricity):</string>
    <string name="cost_1_hour_work_depreciation">Cost 1 hour work (depreciation)</string>
    <string name="cost_1_hour_work_depreciation_colon">Cost 1 hour work (depreciation):</string>
    <string name="length">Length (mm)</string>
    <string name="length_colon">Length (mm):</string>
    <string name="parts_count">Parts count</string>
    <string name="parts_count_colon">Parts count:</string>
    <string name="product">Product</string>
    <string name="product_colon">Product:</string>
    <string name="setting">Setting</string>
    <string name="setting_colon">Setting:</string>
    <string name="filaments">Filaments</string>
    <string name="filaments_colon">Filaments:</string>
    <string name="plastics">Plastics</string>
    <string name="plastics_colon">Plastics:</string>
    <string name="part">Part</string>
    <string name="part_colon">Part:</string>
    <string name="density_small">density</string>
    <string name="density_small_colon">density:</string>
    <string name="g_cm3">g/cm³</string>
    <string name="select_filament">Select filament</string>
    <string name="select_settings">Select settings</string>
    <string name="select_part">Select part</string>
    <string name="select_plastic">Select plastic</string>

</resources>