<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/lpr_bt_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_baseline_delete_forever_24"/>

            <ImageButton
                android:id="@+id/lpr_bt_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_baseline_edit_24"/>

            <TextView
                android:id="@+id/lpr_tv_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/lpr_bt_edit"
                android:layout_toStartOf="@id/lpr_bt_delete"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                />





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/lpr_bt_edit"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lpr_tv_count_parts_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/parts_count_colon"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_toEndOf="@+id/lpr_tv_count_parts_label"
                        android:layout_alignBottom="@+id/lpr_tv_count_parts_label"
                        android:layout_toStartOf="@+id/lpr_tv_count_parts_value"
                        android:background="#c0c0c0"/>

                    <TextView
                        android:id="@+id/lpr_tv_count_parts_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="end"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/jet_brains_mono_regular"
                        android:layout_marginStart="10dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lpr_tv_weight_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/weight_colon"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_toEndOf="@+id/lpr_tv_weight_label"
                        android:layout_alignBottom="@+id/lpr_tv_weight_label"
                        android:layout_toStartOf="@+id/lpr_tv_weight_value"
                        android:background="#c0c0c0"/>

                    <TextView
                        android:id="@+id/lpr_tv_weight_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="end"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/jet_brains_mono_regular"
                        android:layout_marginStart="10dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lpr_tv_filament_cost_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/filament_cost_colon"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_toEndOf="@+id/lpr_tv_filament_cost_label"
                        android:layout_alignBottom="@+id/lpr_tv_filament_cost_label"
                        android:layout_toStartOf="@+id/lpr_tv_filament_cost_value"
                        android:background="#c0c0c0"/>

                    <TextView
                        android:id="@+id/lpr_tv_filament_cost_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="end"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/jet_brains_mono_regular"
                        android:layout_marginStart="10dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lpr_tv_electric_cost_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/electricity_cost_colon"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_toEndOf="@+id/lpr_tv_electric_cost_label"
                        android:layout_alignBottom="@+id/lpr_tv_electric_cost_label"
                        android:layout_toStartOf="@+id/lpr_tv_electric_cost_value"
                        android:background="#c0c0c0"/>

                    <TextView
                        android:id="@+id/lpr_tv_electric_cost_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="end"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/jet_brains_mono_regular"
                        android:layout_marginStart="10dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lpr_tv_depreciation_cost_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/depreciation_cost_colon"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_toEndOf="@+id/lpr_tv_depreciation_cost_label"
                        android:layout_alignBottom="@+id/lpr_tv_depreciation_cost_label"
                        android:layout_toStartOf="@+id/lpr_tv_depreciation_cost_value"
                        android:background="#c0c0c0"/>

                    <TextView
                        android:id="@+id/lpr_tv_depreciation_cost_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="end"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/jet_brains_mono_regular"
                        android:layout_marginStart="10dp" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lpr_tv_net_cost_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/net_cost_colon"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_toEndOf="@+id/lpr_tv_net_cost_label"
                        android:layout_alignBottom="@+id/lpr_tv_net_cost_label"
                        android:layout_toStartOf="@+id/lpr_tv_net_cost_value"
                        android:background="#c0c0c0"/>

                    <TextView
                        android:id="@+id/lpr_tv_net_cost_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="end"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/jet_brains_mono_bold"
                        android:layout_marginStart="10dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lpr_tv_total_cost_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/total_cost_colon"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_toEndOf="@+id/lpr_tv_total_cost_label"
                        android:layout_alignBottom="@+id/lpr_tv_total_cost_label"
                        android:layout_toStartOf="@+id/lpr_tv_total_cost_value"
                        android:background="#c0c0c0"/>

                    <TextView
                        android:id="@+id/lpr_tv_total_cost_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="end"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/jet_brains_mono_extra_bold"
                        android:layout_marginStart="10dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lpr_tv_profit_cost_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/profit_colon"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_toEndOf="@+id/lpr_tv_profit_cost_label"
                        android:layout_alignBottom="@+id/lpr_tv_profit_cost_label"
                        android:layout_toStartOf="@+id/lpr_tv_profit_cost_value"
                        android:background="#c0c0c0"/>

                    <TextView
                        android:id="@+id/lpr_tv_profit_cost_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="end"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/jet_brains_mono_bold_italic"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="10dp" />

                </RelativeLayout>


            </LinearLayout>



        </RelativeLayout>


    </LinearLayout>



</LinearLayout>
